# security-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tenants.example.json
.github/workflows/: ci.yml
agents/: example_registry.json
docs/: cloudflare-for-ai-agents-roadmap.md  context-graph.md  customer-integration-guide.md  customer-onboarding.md  deployment.md  great-question-demo-script.md  live-demo-script.md  mvp-strategy.md  ollama-demo.md  ollama-risk-agent-demo.md  openai-agents-demo.md  policy-schema.md  real-demo.md  risk-showcase.md  tool-proxy.md
docs/templates/: customer-intake-questionnaire.md  pilot-rollout-plan.md  policy-document-checklist.md  (+2 more)
examples/: context_graph_demo.py  great_question_ai_research_demo.py  ollama_local_support_demo.py  ollama_risk_agent_demo.py  openai_agents_example.py  openai_agents_real_support_demo.py  tool_proxy_demo.py  tool_routes.example.json
policies/: default_policy.json
scenarios/: destructive_command.json  production_deploy.json  refund_high_amount.json  secret_leakage.json  supported_claim.json  unsupported_claim.json  wrong_role_refund.json
scripts/: great_question_demo.sh  live_demo.sh  research_guard_cli.py
tests/: test_adapters.py  test_cli.py  test_context_graph.py  test_no_dashboard_mvp.py  test_ollama_demo.py  test_ollama_risk_agent_demo.py  test_openai_agents_adapter.py  test_openai_real_demo.py  test_production_hardening.py  test_real_demo.py  test_risk_showcase.py  test_shadow_mode.py  test_supervisor.py  test_tool_proxy.py  test_verifiers.py
(+53 files in other folders)
