[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentient"
version = "0.1.0"
description = "A policy-driven supervisor agent for monitoring and stopping unsafe AI agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
openai = ["openai-agents"]

[project.scripts]
sentient = "sentient.cli:main"
sentient-api = "sentient.api:main"
sentient-demo = "sentient.demo:main"
sentient-real-demo = "sentient.real_demo:main"
sentient-risk-showcase = "sentient.risk_showcase:main"

[tool.setuptools.packages.find]
where = ["src"]
